--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Notion StockWidget</title></head
-  >a
+    <title>Notion Stock Trading Widget</title>
+  </head>
   <body>
     <h1>
-      This is a static template, there is no bundler or bundling involved!
+      Notion Stock Trading Widget
     </h1>
   </body>
 </html>
